# COGNIS-V2

./: .gitignore  AGENTS.md  README.md  benchmark_results.txt  pyproject.toml
.github/workflows/: ci-native.yml  ci.yml
.tmp/analysis-artifacts-reference/: master.analysis.input.json  master.analysis.output.json
.tmp/test-artifact-writer/: master.analysis.output.json  master.recipe.json  master.report.json  master.report.md
.tmp/test-cli-reference-run/artifacts/: master.analysis.input.json  master.analysis.output.json  master.analysis.reference.json  master.decision_history.json  master.recipe.json  master.report.json  master.report.md
.tmp/test-reference-artifact-writer/: master.analysis.input.json  master.analysis.output.json  master.analysis.reference.json  master.decision_history.json  master.recipe.json  master.report.json  master.report.md
cognis/: __init__.py  batch.py  cli.py  config.py  engine.py  session_compare.py
cognis/analysis/: analyzer.py  features.py  loudness.py  preflight.py  spectrum.py  stereo.py
cognis/dsp/: __init__.py  dynamics.py  eq.py  filters.py  fir_executor.py  limiter.py  stereo.py
cognis/io/: __init__.py  audio.py
cognis/models/: __init__.py  artifact_detector.py  initializer.py  preference_ranker.py  style_encoder.py
cognis/optimizer/: __init__.py  decision_history.py  objective.py  reference_deltas.py  reference_targets.py  search.py  targets.py
cognis/reports/: __init__.py  qc.py  reference.py
cognis/serialization/: __init__.py  analysis_artifacts.py  artifacts.py  recipe.py
cpp/: CMakeLists.txt
cpp/include/cognis_dsp/: dynamics_executor.hpp  fir_executor.hpp  limiter.hpp
cpp/src/: dynamics_executor.cpp  fir_executor.cpp  pybind_module.cpp
docs/: analyzer_qc_reporting.md  analyzer_qc_reports.md  batch_lab.md  bottleneck_assessment_phase2.md  implementation_plan.md  module_structure.md  objective_function.md  parameter_schema.md
dogfood/: README.md
dogfood/manifests/: core-dogfood.json  reference-dogfood.json  stress-cases.json
scripts/: _benchmark_common.py  benchmark_fir_crossover.py  benchmark_limiter_helpers.py  benchmark_render_loop.py  validate_native.sh
tests/: conftest.py  test_analysis_artifacts.py  test_analyzer.py  test_batch.py  test_cli.py  test_decision_history_artifacts.py  test_dynamics.py  test_engine.py  test_filters.py  test_fir_executor.py  test_limiter.py  test_objective_attribution.py  test_optimizer.py  test_reference_targets.py  test_reports.py  test_session_compare.py
tests/fixtures/: analysis_output_safe.json  analysis_reference_artifact.json  decision_history_tradeoff_loudness_vs_ceiling.json  decision_history_tradeoff_tie_heavy.json  reference_attribution_payload.json  report_pass.json  session_compare_cases_v1.json
tests/fixtures/session_compare/: session_pairs.json
