[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cognis"
version = "0.1.0"
description = "White-box automated mastering engine backbone"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "soundfile>=0.12.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
cognis = "cognis.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cognis*"]

[tool.pytest.ini_options]
addopts = ["-p", "no:cacheprovider"]
pythonpath = ["."]
testpaths = ["tests"]
norecursedirs = [".pytest_cache", "pytest-cache-files-*"]
